2013-02-27  Dan Fandrich <dan@coneharvesters.com>

	* tests/.cvsignore: ignore more stuff
	* Makefile.am: Add both gtk pkgconfig templates to the tarball
	* Added some more strings to translate that were missing
	* fixed crash when viewing an enumerated tag with an unsupported value

2013-02-25  Dan Fandrich <dan@coneharvesters.com>

	* po/es.po: Updated Spanish translation by Fabián Mandelbaum
	* po/pl.po: Updated Polish translation by Jakub Bogusz

2013-02-23  Dan Fandrich <dan@coneharvesters.com>

	* Removed use of broken-by-design exif_tag_get_name(). This fixes
	  display of GPSLatitude and GPSLatitudeRef tag names. Patch
	  by Stanislav Brabec (bug #2014281)
	* Changed a few fuzzy translations and removed the fuzzyiness

2012-06-14  Dan Fandrich <dan@coneharvesters.com>

	* encoding of source files set to utf8 (somehow this was missed
	  in the last change)

2012-05-08  Valere Monseur <valere.monseur@ymail.com>

	* libexif-gtk made compatible for both gtk2 (min version: 2.4) and gtk3
	* added --with-gtk3 option in configure.ac (default is gtk2)
	* encoding of ru translation file set to utf8
	* fixed bugs linked to gtk_notebook_remove_page action
	* fixed internationalisation bugs in gtk-options.c & configure.ac

2011-12-08  Dan Fandrich <dan@coneharvesters.com>

	* Cleanups in internationalization, whitespace & comments.
	  Patch by Valere Monseur <valere.monseur@ymail.com>
	* po/fr.po: Updated French translation by Valère Monseur
	* Converted ChangeLog into UTF-8

2009-09-24  Dan Fandrich <dan@coneharvesters.com>

	* po/POTFILES.in: added additional files that need translation

2009-09-24  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif-gtk/gtk-exif-entry-user-comment.c: Complete information
	  about copyright. Fixes #1673969.

2009-09-23  Dan Fandrich <dan@coneharvesters.com>

	* Added the text of the LGPL V2.1 in COPYING so there isn't any
	  confusion as to the licensing terms of the project. GNU